@@ -41,6 +41,7 @@ public class RealmProcessorTest {
     private JavaFileObject noAccessorsModel = JavaFileObjects.forResource("some/test/NoAccessors.java");
     private JavaFileObject fieldNamesModel = JavaFileObjects.forResource("some/test/FieldNames.java");
     private JavaFileObject customAccessorModel = JavaFileObjects.forResource("some/test/CustomAccessor.java");
+    private JavaFileObject missingGenericTypeModel = JavaFileObjects.forResource("some/test/MissingGenericType.java");
 
     @Test
     public void compileSimpleFile() {
@@ -214,6 +215,14 @@ public class RealmProcessorTest {
     public void compileNoAccessorsFile() {
         ASSERT.about(javaSource())
                 .that(noAccessorsModel)
+                .processedWith(new RealmProcessor())
+                .failsToCompile();
+    }
+
+    @Test
+    public void compileMissingGenericType() {
+        ASSERT.about(javaSource())
+                .that(missingGenericTypeModel)
                 .processedWith(new RealmProcessor())
                 .failsToCompile();
     }
