@@ -11,6 +11,7 @@
  * Added a check to give a better error message when null is used as value for a primary key. 
  * Fixed unchecked cast warnings when building with Realm.
  * Cleaned up examples (remove old test project).
+ * Added checking for missing generic type in RealmList fields in annotation processor.
 
 0.80.3
  * Calling Realm.copyToRealmOrUpdate() with an object with a null primary key now throws a proper exception.
